--- a/Hosts.ini
+++ b/Hosts.ini
@@ -4,4 +4,4 @@
 n1 ansible_host=172.31.23.135 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no' 
 [webservers]
 n2 ansible_host=172.31.18.134 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no' 
-n3 ansible_host=172.31.22.194 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n3 ansible_host=172.31.24.106 ansible_user=centos ansible_ssh_private_key_file=/home/ec2-user/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
