--- a/Hosts.ini
+++ b/Hosts.ini
@@ -1,7 +1,8 @@
-#[localhost]
-#m1 ansible_host=172.31.95.175 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
-n1 ansible_host=172.31.22.220 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no' 
+#[localhost]
+#m1 ansible_host=172.31.18.228 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+
+n1 ansible_host=172.31.23.135 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no' 
 [webservers]
-n2 ansible_host=172.31.87.93 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no' 
-n3 ansible_host=172.31.91.200 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n2 ansible_host=172.31.18.134 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no' 
+n3 ansible_host=172.31.24.106 ansible_user=centos ansible_ssh_private_key_file=/home/ec2-user/Bentkp.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
