--- a/05-Deploy-Flaskapp.yml
+++ b/05-Deploy-Flaskapp.yml
@@ -4,13 +4,13 @@
   become: yes
 
   tasks:
-    - name: Start Flask App on CentOS
-      command: "nohup python3 /home/centos/Flask-Web-App-Project
+    - name: Start Flask App on ubuntu
+      command: "nohup python3 /home/ubuntu/Flask-Web-App-Project
            /app.py"
       async: 100
       poll: 0
       become_user: "{{ ansible_user }}"
-      when: ansible_distribution == "CentOS"
+      when: ansible_distribution == "ubuntu"
 
     - name: Start Flask App on Ubuntu
       command: "nohup python3 /home/ubuntu/Flask-Web-App-Project
